# libamdrdf

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
docs/: specification.md
imported/: CMakeLists.txt
imported/catch2/: CMakeLists.txt
imported/cli11/: CMakeLists.txt
imported/json/: CMakeLists.txt
imported/zstd/: CMakeLists.txt
rdf/: CMakeLists.txt
rdf/inc/: amdrdf.h
rdf/src/: amdrdf.cpp
rdf/test/: CMakeLists.txt
rdf/test/data/: test.json
rdf/test/inc/: test_rdf.h
rdf/test/src/: IO_test.cpp  RDF_test.cpp  main.cpp  test_file.c
rdfg/: CMakeLists.txt
rdfg/src/: rdfg.cpp
rdfi/: CMakeLists.txt
rdfi/src/: rdfi.cpp
rdfm/: CMakeLists.txt
rdfm/src/: rdfm.cpp
rdfm/test/: CMakeLists.txt
rdfm/test/data/: empty-chunk.json  empty-header.json
